# self-made-linter

./: .linterrc.json  Cargo.toml  README.md  test.vue
fixtures/phase5/: test_rules.vue
mock_project/components/: Header.vue
mock_project/pages/: index.vue
mock_project/pages/user/: profile.vue
src/: cli.rs  linter.rs  main.rs  template_parser.rs
src/rules/: mod.rs  no_console.rs  no_process_env.rs  no_v_html.rs
src/rules/nuxt/: mod.rs  prefer_import_meta.rs
src/rules/vue/: mod.rs  mustache_interpolation_spacing.rs  require_v_for_key.rs
