[package]
name = "linter-test"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
html5gum = "0.8.3"
ignore = "0.4.25"
miette = "7.6.0"
oxc_allocator = "0.105.0"
oxc_ast = "0.105.0"
oxc_parser = "0.105.0"
oxc_span = "0.105.0"
rayon = "1.11.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
walkdir = "2.5.0"
